# elm_rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
elm-test/: README.md
elm_rs/: .gitignore  Cargo.toml  README.md
elm_rs/elm-test/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision7/: dependencies.7de8ed78507af50f431866c985fa8e342f5bebd4c4305ec962e0a765f42f2e28.json  elm.json
elm_rs/examples/: example.rs
elm_rs/src/: deserialize.rs  elm.rs  elm_decode.rs  elm_deserialize.rs  elm_encode.rs  elm_query.rs  json.rs  lib.rs  query.rs  serialize.rs
elm_rs/src/test/: complex.rs  enums_adjacent.rs  enums_external.rs  enums_internal.rs  enums_untagged.rs  etc_serde.rs  hygiene.rs  mod.rs  nested.rs  query.rs  regression.rs  structs.rs  structs_serde.rs  types.rs
elm_rs_derive/: Cargo.toml  README.md
elm_rs_derive/src/: attributes.rs  elm.rs  elm_decode.rs  elm_deserialize.rs  elm_encode.rs  elm_query.rs  elm_query_field.rs  elm_serialize.rs  json.rs  lib.rs  query.rs
jalava/: .gitignore  Cargo.toml  README.md
jalava-derive/: Cargo.toml  README.md
jalava-derive/src/: attributes.rs  elm.rs  elm_form.rs  json.rs  lib.rs  query.rs  rocket.rs
jalava/examples/: example.rs
jalava/integration/: elm.json
jalava/integration/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision7/: dependencies.48ad2d7d776c8441caba5940dac286ca296cd7b2851e2c8c603df7b5697dd9af.json  dependencies.628aa361c93a919f616fd007d6b5d7bf368d8bb761209ace1fc8d25f4354b044.json  elm.json  elmTestOutput.js
jalava/integration/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision7/elm-stuff/0.19.1/: Example.elmi  Example.elmo  Generated.elmi  Generated.elmo  Test-Generated-Main.elmo
jalava/integration/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision7/install/: elm.json
jalava/integration/tests/: Example.elm  Generated.elm
jalava/src/: elm.rs  elm_form.rs  json.rs  lib.rs  query.rs  rocket.rs
jalava/src/test/: complex.rs  enums_adjacent.rs  enums_external.rs  enums_internal.rs  enums_untagged.rs  etc_serde.rs  hygiene.rs  mod.rs  rocket.rs  structs.rs  structs_serde.rs  types.rs
jalava/tests/: json.rs  rocket.rs  test.rs
jalava/tests/elm/: elm.json  index.html
jalava/tests/elm/src/: Bindings.elm  FormBindings.elm  JsonBindings.elm  Main.elm
jalava/tests/elm/tests/: BindingsTest.elm  JsonBindingsTest.elm
