[package]
name = "elm_rs"
version = "0.2.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Generate Elm bindings for your Rust types"
readme = "README.md"
repository = "https://github.com/Heliozoa/elm_rs"
license = "MIT OR Apache-2.0"
keywords = ["elm", "bindings"]
categories = ["development-tools::ffi", "web-programming"]
resolver = "2"

[features]
default = ["derive", "serde"]
derive = ["elm_rs_derive", "elm_rs_derive/json", "elm_rs_derive/query"]
serde = ["elm_rs_derive/serde"]

[dependencies]
elm_rs_derive = { version = "0.2.0", optional = true }

# optional
chrono = { version = "0.4.19", optional = true }
time = { version = "0.3.13", optional = true }
uuid = { version = "1.1.2", optional = true }

[dev-dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = { version = "1.0.78" }
unescape = "0.1.0"
uuid = { version = "1.1.2", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
