[package]
name = "elm_rs_derive"
version = "0.2.3"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Derive macros for elm_rs"
readme = "README.md"
repository = "https://github.com/Heliozoa/elm_rs"
license = "MPL-2.0"
keywords = []
categories = []
resolver = "2"

[lib]
proc-macro = true

[features]
default = []
json = []
query = []
serde = []

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "2.0.98"
