[package]
name = "jalava-derive"
version = "0.1.0"
edition = "2021"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
resolver = "2"

[lib]
proc-macro = true

[features]
serde = []
rocket = []
json = []

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
