[package]
name = "jalava-derive"
version = "0.1.0"
edition = "2021"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
resolver = "2"

[lib]
proc-macro = true

[features]
json = []
query = []
serde = []

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
