[package]
name = "jalava"
version = "0.1.0"
edition = "2021"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
resolver = "2"

[features]
default = ["derive"]
derive = ["jalava-derive", "jalava-derive/json", "jalava-derive/query"]
with-serde = ["jalava-derive/json", "jalava-derive/serde"]

[dependencies]
jalava-derive = { path = "../jalava-derive", optional = true }

# optional
chrono = { version = "0.4.19", optional = true }
time = { version = "0.2.27", optional = true }
uuid = { version = "0.8.2", optional = true }

[dev-dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = { version = "1.0.78" }
tokio = "1.16.1"
unescape = "0.1.0"
uuid = { version = "0.8.2", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
